--- a/Kod/src/example_html.details.html
+++ b/Kod/src/example_html.details.html
@@ -23,7 +23,7 @@
     </tr>
     <tr>
       <th scope="row">Date:</th>
-      <td>2024-01-11 10:30:39</td>
+      <td>2024-01-12 19:08:43</td>
     </tr>
     <tr>
       <th scope="row">Coverage:</th>
@@ -46,21 +46,21 @@
     </tr>
     <tr>
       <th scope="row">Lines:</th>
-      <td>127</td>
-      <td>174</td>
-      <td class="coverage-low">73.0%</td>
+      <td>145</td>
+      <td>182</td>
+      <td class="coverage-medium">79.7%</td>
     </tr>
     <tr>
       <th scope="row">Functions:</th>
       <td>13</td>
-      <td>14</td>
-      <td class="coverage-high">92.9%</td>
+      <td>13</td>
+      <td class="coverage-high">100.0%</td>
     </tr>
     <tr>
       <th scope="row">Branches:</th>
-      <td>30</td>
+      <td>37</td>
       <td>63</td>
-      <td class="coverage-low">47.6%</td>
+      <td class="coverage-low">58.7%</td>
     </tr>
   </table>
 </div>
@@ -93,14 +93,14 @@
       <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html">E2E_profile1.c</a>
     </th>
     <td>
-      <meter class="coverage-low" min="0" max="100" value="54.2" title="54.2%">54.2</meter>
+      <meter class="coverage-low" min="0" max="100" value="62.5" title="62.5%">62.5</meter>
     </td>
-    <td class="CoverValue line-coverage coverage-low">54.2%</td>
-    <td class="CoverValue line-coverage coverage-low">52 / 96</td>
+    <td class="CoverValue line-coverage coverage-low">62.5%</td>
+    <td class="CoverValue line-coverage coverage-low">60 / 96</td>
     <td class="CoverValue function-coverage coverage-high">100.0%</td>
     <td class="CoverValue function-coverage coverage-high">6 / 6</td>
-    <td class="CoverValue branch-coverage coverage-low">45.8%</td>
-    <td class="CoverValue branch-coverage coverage-low">27 / 59</td>
+    <td class="CoverValue branch-coverage coverage-low">57.6%</td>
+    <td class="CoverValue branch-coverage coverage-low">34 / 59</td>
   </tr>
 
 
@@ -109,12 +109,12 @@
       <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html">UT_E2E_profile1.c</a>
     </th>
     <td>
-      <meter class="coverage-high" min="0" max="100" value="97.2" title="97.2%">97.2</meter>
+      <meter class="coverage-high" min="0" max="100" value="100.0" title="100.0%">100.0</meter>
     </td>
-    <td class="CoverValue line-coverage coverage-high">97.2%</td>
-    <td class="CoverValue line-coverage coverage-high">69 / 71</td>
-    <td class="CoverValue function-coverage coverage-medium">85.7%</td>
-    <td class="CoverValue function-coverage coverage-medium">6 / 7</td>
+    <td class="CoverValue line-coverage coverage-high">100.0%</td>
+    <td class="CoverValue line-coverage coverage-high">79 / 79</td>
+    <td class="CoverValue function-coverage coverage-high">100.0%</td>
+    <td class="CoverValue function-coverage coverage-high">6 / 6</td>
     <td class="CoverValue branch-coverage coverage-unknown">-%</td>
     <td class="CoverValue branch-coverage coverage-unknown">0 / 0</td>
   </tr>
