--- a/Kod/src/example_html.details.functions.html
+++ b/Kod/src/example_html.details.functions.html
@@ -23,7 +23,7 @@
     </tr>
     <tr>
       <th scope="row">Date:</th>
-      <td>2024-01-20 23:14:39</td>
+      <td>2024-01-21 01:21:21</td>
     </tr>
   </table>
 </div>
@@ -38,9 +38,9 @@
     </tr>
     <tr>
       <th scope="row">Lines:</th>
-      <td>183</td>
-      <td>205</td>
-      <td class="coverage-medium">89.3%</td>
+      <td>219</td>
+      <td>219</td>
+      <td class="coverage-high">100.0%</td>
     </tr>
     <tr>
       <th scope="row">Functions:</th>
@@ -50,9 +50,9 @@
     </tr>
     <tr>
       <th scope="row">Branches:</th>
-      <td>46</td>
+      <td>59</td>
       <td>63</td>
-      <td class="coverage-low">73.0%</td>
+      <td class="coverage-high">93.7%</td>
     </tr>
   </table>
 </div>
@@ -83,7 +83,7 @@
       <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l24">24</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l24"> called 5 times</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l24"> called 9 times</a>
     </td>
   </tr>
   <tr>
@@ -97,7 +97,7 @@
       <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l37">37</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l37"> called 18 times</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l37"> called 20 times</a>
     </td>
   </tr>
   <tr>
@@ -111,35 +111,35 @@
       <a href="example_html.details.crc.c.a8ab40d76a2a884a4309630977d25ee0.html#l10">10</a>
     </td>
     <td>
-      <a href="example_html.details.crc.c.a8ab40d76a2a884a4309630977d25ee0.html#l10"> called 39 times</a>
+      <a href="example_html.details.crc.c.a8ab40d76a2a884a4309630977d25ee0.html#l10"> called 40 times</a>
     </td>
   </tr>
   <tr>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l180">E2E_P01Check</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l185">E2E_P01Check</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l180">E2E_profile1.c</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l185">E2E_profile1.c</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l180">180</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l185">185</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l180"> called 8 times</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l185"> called 10 times</a>
     </td>
   </tr>
   <tr>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l140">E2E_P01Protect</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l146">E2E_P01Protect</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l140">E2E_profile1.c</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l146">E2E_profile1.c</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l140">140</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l146">146</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l140"> called 5 times</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l146"> called 5 times</a>
     </td>
   </tr>
   <tr>
@@ -153,7 +153,7 @@
       <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l77">77</a>
     </td>
     <td>
-      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l77"> called 12 times</a>
+      <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html#l77"> called 14 times</a>
     </td>
   </tr>
   <tr>
@@ -172,30 +172,30 @@
   </tr>
   <tr>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l251">Test_CheckConfig</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l295">Test_CheckConfig</a>
     </td>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l251">UT_E2E_profile1.c</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l295">UT_E2E_profile1.c</a>
     </td>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l251">251</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l295">295</a>
     </td>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l251"> called 1 time</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l295"> called 1 time</a>
     </td>
   </tr>
   <tr>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l234">Test_Of_CalculateDeltaCounter</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l278">Test_Of_CalculateDeltaCounter</a>
     </td>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l234">UT_E2E_profile1.c</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l278">UT_E2E_profile1.c</a>
     </td>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l234">234</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l278">278</a>
     </td>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l234"> called 1 time</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l278"> called 1 time</a>
     </td>
   </tr>
   <tr>
@@ -228,30 +228,30 @@
   </tr>
   <tr>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l170">Test_Of_E2E_P01_CalculateCRC</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l218">Test_Of_E2E_P01_CalculateCRC</a>
     </td>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l170">UT_E2E_profile1.c</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l218">UT_E2E_profile1.c</a>
     </td>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l170">170</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l218">218</a>
     </td>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l170"> called 1 time</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l218"> called 1 time</a>
     </td>
   </tr>
   <tr>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l217">Test_Of_E2E_UpdateCounter</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l261">Test_Of_E2E_UpdateCounter</a>
     </td>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l217">UT_E2E_profile1.c</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l261">UT_E2E_profile1.c</a>
     </td>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l217">217</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l261">261</a>
     </td>
     <td>
-      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l217"> called 1 time</a>
+      <a href="example_html.details.UT_E2E_profile1.c.bc10867455304faeaf7d8fef5347d31b.html#l261"> called 1 time</a>
     </td>
   </tr>
 </table>
