--- a/Kod/src/example_html.details.html
+++ b/Kod/src/example_html.details.html
@@ -23,7 +23,7 @@
     </tr>
     <tr>
       <th scope="row">Date:</th>
-      <td>2024-01-20 23:14:39</td>
+      <td>2024-01-21 01:21:21</td>
     </tr>
     <tr>
       <th scope="row">Coverage:</th>
@@ -46,9 +46,9 @@
     </tr>
     <tr>
       <th scope="row">Lines:</th>
-      <td>183</td>
-      <td>205</td>
-      <td class="coverage-medium">89.3%</td>
+      <td>219</td>
+      <td>219</td>
+      <td class="coverage-high">100.0%</td>
     </tr>
     <tr>
       <th scope="row">Functions:</th>
@@ -58,9 +58,9 @@
     </tr>
     <tr>
       <th scope="row">Branches:</th>
-      <td>46</td>
+      <td>59</td>
       <td>63</td>
-      <td class="coverage-low">73.0%</td>
+      <td class="coverage-high">93.7%</td>
     </tr>
   </table>
 </div>
@@ -93,14 +93,14 @@
       <a href="example_html.details.E2E_profile1.c.ce93942095314b57050474d9987d518e.html">E2E_profile1.c</a>
     </th>
     <td>
-      <meter class="coverage-medium" min="0" max="100" value="79.0" title="79.0%">79.0</meter>
+      <meter class="coverage-high" min="0" max="100" value="100.0" title="100.0%">100.0</meter>
     </td>
-    <td class="CoverValue line-coverage coverage-medium">79.0%</td>
-    <td class="CoverValue line-coverage coverage-medium">79 / 100</td>
+    <td class="CoverValue line-coverage coverage-high">100.0%</td>
+    <td class="CoverValue line-coverage coverage-high">101 / 101</td>
     <td class="CoverValue function-coverage coverage-high">100.0%</td>
     <td class="CoverValue function-coverage coverage-high">6 / 6</td>
-    <td class="CoverValue branch-coverage coverage-low">72.9%</td>
-    <td class="CoverValue branch-coverage coverage-low">43 / 59</td>
+    <td class="CoverValue branch-coverage coverage-high">93.2%</td>
+    <td class="CoverValue branch-coverage coverage-high">55 / 59</td>
   </tr>
 
 
@@ -112,7 +112,7 @@
       <meter class="coverage-high" min="0" max="100" value="100.0" title="100.0%">100.0</meter>
     </td>
     <td class="CoverValue line-coverage coverage-high">100.0%</td>
-    <td class="CoverValue line-coverage coverage-high">98 / 98</td>
+    <td class="CoverValue line-coverage coverage-high">109 / 109</td>
     <td class="CoverValue function-coverage coverage-high">100.0%</td>
     <td class="CoverValue function-coverage coverage-high">6 / 6</td>
     <td class="CoverValue branch-coverage coverage-unknown">-%</td>
@@ -125,14 +125,14 @@
       <a href="example_html.details.crc.c.a8ab40d76a2a884a4309630977d25ee0.html">crc.c</a>
     </th>
     <td>
-      <meter class="coverage-medium" min="0" max="100" value="85.7" title="85.7%">85.7</meter>
+      <meter class="coverage-high" min="0" max="100" value="100.0" title="100.0%">100.0</meter>
     </td>
-    <td class="CoverValue line-coverage coverage-medium">85.7%</td>
-    <td class="CoverValue line-coverage coverage-medium">6 / 7</td>
+    <td class="CoverValue line-coverage coverage-high">100.0%</td>
+    <td class="CoverValue line-coverage coverage-high">9 / 9</td>
     <td class="CoverValue function-coverage coverage-high">100.0%</td>
     <td class="CoverValue function-coverage coverage-high">1 / 1</td>
-    <td class="CoverValue branch-coverage coverage-medium">75.0%</td>
-    <td class="CoverValue branch-coverage coverage-medium">3 / 4</td>
+    <td class="CoverValue branch-coverage coverage-high">100.0%</td>
+    <td class="CoverValue branch-coverage coverage-high">4 / 4</td>
   </tr>
 
 </table>
